[BE] Upload activity cover image https://trello.com/c/dMG8DN4K/82-be-upload-activity-cover-image
